lab03/svc-v1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: envlab
  name: envlab-v1
spec:
  ports:
  - port: 5678
    protocol: TCP
    targetPort: 3000
  selector:
    app: envlab
    version: "1"
  type: ClusterIP
