lab03/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: envlab
  name: envlab
spec:
  ports:
  - port: 5678
    protocol: TCP
    targetPort: 3000
  selector:
    app: envlab
  type: ClusterIP
