lab03/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envlab-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: envlab
            port:
              number: 5678
